update added more functionalities
update added more functionalities

--- a/views/calculator.html
+++ b/views/calculator.html
@@ -17,6 +17,7 @@
             table {
                 border: none;
                 width: auto;
+                background-color: darkolivegreen;
             }
     
             input[type="button"] {
