--- a/views/aboutMe.html
+++ b/views/aboutMe.html
@@ -2,7 +2,13 @@
 <html>
 <head>
     <title>About Me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dosis:wght@200&display=swap" rel="stylesheet">
     <style>
+        body{
+            font-family: 'Comfortaa', cursive;
+        }
         .mainPanel{
             padding: 0.25%;
             width: 100%;
@@ -97,6 +103,9 @@
         .priceTitleContent{
             text-align: center;
         }
+        .priceTitleContent p{
+            text-align: left;
+        }
         .button{
             width: fit-content;
             height: auto;
@@ -134,6 +143,27 @@
                 The point of sale (POS), an important part of the point of purchase, is the place where customers can pay for goods or services and pay sales taxes. These can be physical stores, where terminals and POS systems are used to process card payments, or virtual points of sale such as computers or mobile electronic devices.
                 <div class="citation"><a href="https://www.investopedia.com/terms/p/point-of-sale.asp">investopedia.com</a></div>
             </div>
+            <div class="contentPanel">
+                <p>
+                    How does our POS system work?
+                </p>
+                <p>
+                    We provide small business a jumpstart, where you can manage your money and sales orders professionally and securely.
+                </p>
+                <p>
+                    We provide affordable cash registers for you to maintain and are suitable for any type of business you have. Our cash register is a web based application, where you can make your iPad or computer as your cash register.
+                </p>
+                <p>
+                    You can also request a bundle from us, if you prefer to buy a full set of cash registers.
+                </p>
+                <p>
+                    Your data is secure in the cloud and only you and your employees can have access to the sales orders you have acquired.
+                </p>
+                <p>
+                    Our cashiers can also store your inventory data. It's as simple as, you set the inventory amount for each item you want to sell on the first day using our system, then our cash register will count the number of items you sell and tell you to restock.
+                </p>
+            
+            </div>
         </div>
         <div class="panel">
             <div class="titlePanel">
@@ -146,17 +176,22 @@
         </div>
         <div class="panel">
             <div class="titlePanel">
-                Pricing
+                Monthly subscription price
             </div>
             <div class="pricing contentPanel">
                 <div class="priceContent">
                     <div class="titlePanel priceTitle">
                         <span>Rp.</span><br>
                         20.000,00
-                        <br><span>/account</span><span>/month</span>
+                        <br><span>/account</span>
                     </div>
                     <div class="contentPanel priceTitleContent">
-                        aasdasdasdasdasdasd
+                        <p>
+                            Each person (employee or store owner) will have at least 1 account for 1 store, and as a store owner you can have as many devices as you need for one account, you can also add as many accounts as you want for each employee you have.
+                        </p>
+                        <p>
+                            For small shops, for starters, you are welcome to have 1 account which will be the shop owner's account. after you login, you will be immediately presented with the POS interface. Since the account is considered as an admin account, you will have 1 menu consisting of all admin settings. When you want to add your employees to have an account, they will not have the admin menu, unless you give their account rights to have access to the admin menu.
+                        </p>
                         <div class="button">join</div>
                     </div>
                 </div>
@@ -164,10 +199,15 @@
                     <div class="titlePanel priceTitle">
                         <span>Rp.</span><br>
                         50.000,00
-                        <br><span>/3 accounts</span><span>/month</span>
+                        <br><span>/3 accounts</span>
                     </div>
                     <div class="contentPanel priceTitleContent">
-                        aasdasdasdasdasdasd
+                        <p>
+                            With the above plan, you will have 3 accounts for your store. where these 3 accounts include you as a shop owner and 2 other cashiers.
+                        </p>
+                        <p>
+                            You will also save, IDR 120,000 per year by choosing the package above. This money can be used to help your business grow, because our mission is to help small businesses grow and to grow with you.
+                        </p>
                         <div class="button">join</div>
                     </div>
                 </div>
